Navbar and hero section are created

--- a/src/app/layout/additions/navbar/navbar.component.html
+++ b/src/app/layout/additions/navbar/navbar.component.html
@@ -1,1 +1,221 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-light">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      <img alt="Logo" src="assets/images/logo.png" />
+    </a>
+    <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+      <div class="navbar-nav fw-semibold">
+        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#">About us</a>
+        <a class="nav-link" href="#">Recipes</a>
+        <div class="dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuLink" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Categories
+            <svg width="13" height="12" viewBox="0 0 13 12" xmlns="http://www.w3.org/2000/svg" class="dropdown-icon">
+              <path
+                d="M10.3919 3.51562L7.14577 6.76172L3.88795 3.51562L2.80983 4.59375L7.13405 9.14062L11.47 4.59375L10.3919 3.51562Z" />
+            </svg>
+          </a>
+          <ul class="dropdown-menu shadow border-light bg-body rounded" aria-labelledby="dropdownMenuLink">
+            <li>
+
+              <a class="dropdown-item text-primary" href="#">
+
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512"
+                  xml:space="preserve" stroke-width="12.8">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" transform="rotate(-45)" stroke-linejoin="round">
+                  </g>
+                  <g id="SVGRepo_iconCarrier">
+                    <g>
+                      <g>
+                        <path
+                          d="M373.49,195.772c-2.537-1.313-5.573-1.206-8.012,0.283c-2.146,1.31-3.55,3.524-3.85,5.984 c-5.399-2.585-10.887-4.964-16.428-7.133l-0.017-5.938c-0.011-3.473-2.217-6.561-5.5-7.696 c-21.739-7.518-44.47-12.057-67.563-13.493c-2.266-0.142-4.468,0.659-6.11,2.208c-1.644,1.55-2.572,3.71-2.565,5.97l0.007,2.316 c-2.763-0.086-5.493-0.127-8.17-0.119c-2.677,0.008-5.406,0.065-8.17,0.168l-0.007-2.317c-0.007-2.258-0.948-4.414-2.601-5.954 c-1.654-1.539-3.862-2.328-6.123-2.172c-23.083,1.57-45.787,6.243-67.484,13.891c-3.277,1.155-5.465,4.255-5.454,7.729 l0.017,5.938c-5.527,2.202-11.002,4.613-16.385,7.23c-0.315-2.458-1.731-4.664-3.886-5.96c-2.446-1.475-5.485-1.564-8.013-0.236 C52.278,241.038-0.282,328.228,0.001,424.017c0.058,19.64,7.761,38.083,21.69,51.931c13.876,13.795,32.278,21.383,51.835,21.383 h0.223l364.935-1.077c19.64-0.058,38.084-7.761,51.931-21.69c13.848-13.929,21.442-32.417,21.384-52.058 C511.716,326.716,458.643,239.837,373.49,195.772z M479.028,463.042c-10.771,10.834-25.115,16.825-40.391,16.87L73.702,480.99 h-0.173c-15.211,0-29.524-5.902-40.316-16.632c-10.834-10.769-16.825-25.114-16.87-40.39 c-0.253-85.098,44.052-162.951,116.497-206.334l0.31,105.225c0.039,13.491,11.027,24.439,24.51,24.438h0.073 c6.547-0.02,12.694-2.587,17.31-7.23c4.617-4.644,7.148-10.807,7.128-17.355c-0.014-4.503-3.669-8.145-8.17-8.145 c-4.537,0.014-8.184,3.683-8.17,8.195c0.007,2.181-0.838,4.235-2.376,5.783c-1.538,1.548-3.587,2.403-5.77,2.41 c-4.518,0-8.181-3.649-8.193-8.146l-0.301-101.883c5.338-2.825,10.791-5.435,16.318-7.822l0.034,11.613 c0.013,4.506,3.668,8.147,8.169,8.147c4.537-0.013,8.184-3.682,8.171-8.194l-0.086-29.343 c15.883-5.165,32.306-8.648,48.992-10.395l0.405,137.637c0.039,13.491,11.028,24.439,24.511,24.438h0.073 c6.547-0.02,12.694-2.587,17.31-7.23c4.616-4.644,7.147-10.807,7.128-17.354c-0.014-4.505-3.668-8.146-8.17-8.146 c-4.536,0.014-8.183,3.682-8.17,8.194c0.007,2.182-0.838,4.237-2.376,5.785c-1.538,1.547-3.587,2.403-5.77,2.41 c-4.518,0-8.182-3.649-8.194-8.146l-0.377-127.844c2.767-0.11,5.498-0.171,8.168-0.18c2.668-0.022,5.402,0.025,8.172,0.122 l0.28,95.173c0.013,4.505,3.668,8.146,8.17,8.146c4.536-0.014,8.183-3.682,8.17-8.194l-0.308-104.955 c16.696,1.647,33.138,5.034,49.05,10.105l0.377,127.386c0.02,6.547,2.587,12.694,7.23,17.31c4.625,4.599,10.76,7.129,17.278,7.129 h0.074c6.547-0.02,12.694-2.587,17.31-7.23c4.616-4.644,7.148-10.805,7.129-17.354c-0.014-4.505-3.668-8.146-8.17-8.146 c-4.536,0.014-8.183,3.682-8.17,8.194c0.007,2.182-0.838,4.237-2.376,5.785c-1.539,1.547-3.588,2.403-5.771,2.41 c-2.197,0-4.242-0.843-5.784-2.376c-1.547-1.539-2.403-3.588-2.41-5.771l-0.324-109.654c5.54,2.353,11.009,4.932,16.363,7.725 l0.205,69.202c0.014,4.505,3.668,8.146,8.17,8.146c4.536-0.014,8.183-3.682,8.17-8.194l-0.214-72.544 c72.7,42.955,117.462,120.545,117.715,205.645C495.704,437.829,489.798,452.209,479.028,463.042z">
+                        </path>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <circle cx="48.999" cy="415.702" r="8.17"></circle>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <circle cx="81.779" cy="448.285" r="8.17"></circle>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <circle cx="441.171" cy="414.547" r="8.17"></circle>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <path
+                          d="M282.318,112.712c-0.038-12.895,3.268-18.999,7.096-26.066c4.275-7.89,9.118-16.834,9.068-33.897 c-0.051-17.063-4.949-25.977-9.271-33.842c-2.172-3.953-7.14-5.4-11.095-3.226c-3.956,2.172-5.4,7.14-3.227,11.095 c3.871,7.044,7.213,13.128,7.251,26.023c0.038,12.895-3.268,18.999-7.096,26.066c-4.273,7.89-9.117,16.834-9.067,33.897 c0.051,17.064,4.948,25.978,9.268,33.841c1.487,2.707,4.283,4.238,7.168,4.238c1.33,0,2.679-0.326,3.926-1.011 c3.954-2.172,5.399-7.14,3.227-11.095C285.697,131.692,282.356,125.609,282.318,112.712z">
+                        </path>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <path
+                          d="M227.85,112.873c-0.038-12.895,3.268-18.999,7.096-26.066c4.275-7.89,9.118-16.834,9.068-33.897 c-0.051-17.063-4.949-25.977-9.27-33.842c-2.172-3.954-7.14-5.401-11.095-3.226c-3.955,2.172-5.4,7.14-3.227,11.095 c3.87,7.044,7.213,13.128,7.251,26.023c0.038,12.895-3.268,18.998-7.096,26.066c-4.274,7.89-9.118,16.834-9.068,33.897 c0.051,17.063,4.948,25.977,9.268,33.841c1.486,2.707,4.283,4.239,7.168,4.239c1.33,0,2.679-0.325,3.926-1.011 c3.955-2.172,5.4-7.14,3.228-11.094C231.23,131.853,227.888,125.77,227.85,112.873z">
+                        </path>
+                      </g>
+                    </g>
+                  </g>
+                </svg>
+
+                Breakfast</a>
+            </li>
+            <li><a class="dropdown-item text-primary" href="#"><svg xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <g>
+                      <g>
+                        <path
+                          d="M480.32,89.653c-41.613-49.599-118.853-74.749-229.579-74.749c-0.645,0-2.604,0-97.418,9.696 c-3.819,0.386-7.04,3.004-8.207,6.658L0.458,484.519c-1.225,3.833,0.061,8.024,3.221,10.51c1.742,1.37,3.852,2.067,5.966,2.067 c1.728,0,3.466-0.461,5.01-1.403l457.818-278.282c0.023,0,0.045,0.013,0.068,0.013c0.306,0,0.612-0.014,0.923-0.042 c3.308-0.314,5.913-2.358,7.399-5.07l25.629-15.578c2.369-1.441,4.003-3.833,4.488-6.564 C511.361,188.013,519.851,136.77,480.32,89.653z M136.583,121.431c20.605,2.144,37.008,14.258,37.008,28.487 c0,15.681-19.872,28.932-43.397,28.932c-3.971,0-7.805-0.477-11.556-1.188L136.583,121.431z M110.146,415.077 c-0.065-0.031-0.102-0.089-0.169-0.118c-14.301-6.183-23.182-17.206-23.182-28.767c0-18.294,22.08-33.754,48.219-33.754 c19.377,0,36.692,8.306,44.247,20.628L110.146,415.077z M195.762,363.036c-11.081-18.128-34.367-29.885-60.747-29.885 c-37.224,0-67.507,23.794-67.507,53.041c0,15.763,8.934,30.4,23.786,40.344l-64.622,39.279l86.102-269.786 c5.65,1.248,11.43,2.107,17.418,2.107c34.563,0,62.685-21.633,62.685-48.219c0-23.326-21.649-42.83-50.302-47.266l6.622-20.749 c1.222-0.19,2.663-0.423,4.751-0.769c13.875-2.295,26.891-3.995,39.495-5.422c-0.336,2.214-0.566,4.444-0.566,6.698 c0,31.908,34.611,57.863,77.151,57.863s77.151-25.955,77.151-57.863c0-0.254-0.059-0.504-0.062-0.759 c29.811,7.747,50.94,18.972,65.568,30.232c27.588,21.236,44.032,51.346,49.238,89.371L195.762,363.036z M212.166,82.41 c0-2.958,0.691-5.866,1.719-8.726c46.289-3.813,83.59-1.853,113.413,3.565c0.356,1.708,0.595,3.429,0.595,5.161 c0,20.912-26.497,38.575-57.863,38.575C238.663,120.986,212.166,103.323,212.166,82.41z M492.417,182.72l-12.553,7.631 c-7.098-39.362-25.674-70.856-55.416-93.752c-38.462-29.612-116.327-59.482-268.698-35.224l5.818-18.232 c36.395-3.715,86.281-8.763,89.173-8.952c104.491,0,176.669,22.72,214.533,67.535C493.147,134.722,493.279,170.764,492.417,182.72 z">
+                        </path>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <path
+                          d="M247.916,172.031c-3.767-3.767-9.87-3.767-13.637,0l-9.644,9.644c-3.767,3.767-3.767,9.87,0,13.637 c1.883,1.884,4.351,2.825,6.818,2.825c2.467,0,4.935-0.942,6.818-2.825l9.644-9.644 C251.683,181.9,251.683,175.798,247.916,172.031z">
+                        </path>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <path
+                          d="M260.385,72.767c-5.326,0-9.644,4.318-9.644,9.644v19.288c0,5.326,4.318,9.644,9.644,9.644 c5.326,0,9.644-4.318,9.644-9.644V82.41C270.029,77.085,265.711,72.767,260.385,72.767z">
+                        </path>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <path
+                          d="M327.398,243.305l-9.644-28.932c-1.681-5.048-7.125-7.803-12.201-6.098c-5.053,1.686-7.784,7.148-6.098,12.201 l9.644,28.932c1.347,4.04,5.109,6.597,9.149,6.597c1.008,0,2.039-0.16,3.051-0.499 C326.352,253.82,329.083,248.357,327.398,243.305z">
+                        </path>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <path
+                          d="M115.727,265.644c-5.326,0-9.644,4.318-9.644,9.644v19.288c0,5.326,4.318,9.644,9.644,9.644 c5.326,0,9.644-4.318,9.644-9.644v-19.288C125.371,269.962,121.053,265.644,115.727,265.644z">
+                        </path>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <path
+                          d="M125.371,362.083c-5.326,0-9.644,4.318-9.644,9.644v9.644c0,5.326,4.318,9.644,9.644,9.644s9.644-4.318,9.644-9.644 v-9.644C135.015,366.401,130.697,362.083,125.371,362.083z">
+                        </path>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <path
+                          d="M221.81,256c-12.526,0-19.288,9.936-19.288,19.288c0,5.326,4.318,9.644,9.644,9.644c5.326,0,9.644-4.318,9.644-9.644 c5.326,0,9.644-4.318,9.644-9.644S227.136,256,221.81,256z">
+                        </path>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <path
+                          d="M221.81,207.781c-42.54,0-77.151,25.956-77.151,57.863c0,31.908,34.611,57.863,77.151,57.863 c42.54,0,77.151-25.955,77.151-57.863C298.961,233.736,264.35,207.781,221.81,207.781z M221.81,304.219 c-31.366,0-57.863-17.663-57.863-38.575s26.497-38.575,57.863-38.575c31.366,0,57.863,17.663,57.863,38.575 S253.176,304.219,221.81,304.219z">
+                        </path>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <path
+                          d="M371.29,130.63c-34.563,0-62.685,21.633-62.685,48.219c0,26.586,28.122,48.219,62.685,48.219 c34.563,0,62.685-21.633,62.685-48.219C433.975,152.263,405.853,130.63,371.29,130.63z M371.29,207.781 c-23.526,0-43.397-13.251-43.397-28.932c0-15.681,19.872-28.932,43.397-28.932c23.526,0,43.397,13.251,43.397,28.932 C414.687,194.53,394.815,207.781,371.29,207.781z">
+                        </path>
+                      </g>
+                    </g>
+                  </g>
+                </svg>
+                Lunch</a></li>
+            <li><a class="dropdown-item text-primary" href="#"><svg viewBox="0 0 32 32" version="1.1"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <title>drink3</title>
+                    <path
+                      d="M26.562 8.021l-10.496 9.213v11.939l5.841 2.827h-13.689l5.842-2.826v-11.94l-10.622-9.213h16.202l3.243-5.619 0.872 0.503-2.953 5.115h5.76zM24.111 8.965l-3.863 0.015-1.19 2.062h2.745l2.308-2.077zM16.066 15.069c0.591 0 1.069-0.479 1.069-1.070s-0.479-1.070-1.069-1.070-1.070 0.479-1.070 1.070c0 0.592 0.48 1.070 1.070 1.070zM5.89 8.965l2.327 2.077h9.679l1.188-2.057-13.194-0.020z">
+                    </path>
+                  </g>
+                </svg>Drink</a></li>
+            <li><a class="dropdown-item text-primary" href="#"><svg viewBox="-38.84 0 480.34 480.34"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <g data-name="Capa 2" id="Capa_2">
+                      <g id="Outline">
+                        <g id="Cupcake">
+                          <path class="cls-1"
+                            d="M402.65,242.62a55.07,55.07,0,0,0-55.07-55.07h-6A55.05,55.05,0,0,0,301.84,94.4H297c-2.17-13-9.55-22.37-22-28.07-13.6-6.22-31.9-7-46.33-7A31.26,31.26,0,0,1,207.78,52c-4.49-4-7.16-9.14-7.16-13.86,0-11.26,4.83-19.65,7-20.92a8.5,8.5,0,0,0,.2-17c-2.46-.18-60.63-3.88-88.53,30.25C106.06,46.62,102,68.1,107.22,94.4h-6.41A55.08,55.08,0,0,0,61,187.55h-6a55.07,55.07,0,0,0-7.8,109.59L85.82,473.66a8.51,8.51,0,0,0,8.31,6.68H308.52a8.51,8.51,0,0,0,8.31-6.68l38.55-176.53A55.15,55.15,0,0,0,402.65,242.62ZM242.57,463.34l10.36-165.65H294L273.28,463.34Zm-113.2,0L108.65,297.69h41.07l10.36,165.65Zm27.36-165.65h41.1V463.34H167.09Zm48.1,0h41.09L235.56,463.34H204.83Zm-140,0H101.6l20.72,165.65H101ZM301.68,463.34H280.33l20.72-165.65h36.81Zm46.09-182.65H54.87a38.07,38.07,0,0,1,.2-76.14H184.92a8.5,8.5,0,1,0,0-17H100.81a38.08,38.08,0,0,1,0-76.15H116a8.17,8.17,0,0,0,2.1.27,8.86,8.86,0,0,0,2.09-.26,8.5,8.5,0,0,0,6.15-10.33l-.05-.2s0-.09,0-.14,0-.07,0-.11c-7.12-25.61-5-45.59,6.23-59.38,13.58-16.65,38-22,55.07-23.57a56.72,56.72,0,0,0-3.86,20.41c0,9.66,4.7,19.36,12.9,26.6A48.25,48.25,0,0,0,228.6,76.31c35.25,0,47.57,6.74,51,18.09H227.66a8.5,8.5,0,0,0,0,17h74.18a38.08,38.08,0,0,1,0,76.15,8.5,8.5,0,0,0,0,17h45.74a38.07,38.07,0,0,1,.19,76.14Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M240.12,230a15.72,15.72,0,1,0,15.71,15.72A15.74,15.74,0,0,0,240.12,230Zm0,24.44a8.72,8.72,0,1,1,8.71-8.72A8.73,8.73,0,0,1,240.12,254.48Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M73.29,229.1a10.16,10.16,0,1,0-10.16,10.16A10.17,10.17,0,0,0,73.29,229.1Zm-10.16,3.16a3.16,3.16,0,1,1,3.16-3.16A3.15,3.15,0,0,1,63.13,232.26Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M350.08,218.94a10.16,10.16,0,1,0,10.17,10.16A10.17,10.17,0,0,0,350.08,218.94Zm0,13.32a3.16,3.16,0,1,1,3.17-3.16A3.16,3.16,0,0,1,350.08,232.26Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M147.18,129a11.28,11.28,0,1,0,11.28,11.28A11.29,11.29,0,0,0,147.18,129Zm0,15.55a4.28,4.28,0,1,1,4.28-4.27A4.28,4.28,0,0,1,147.18,144.51Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M164.21,57.13a11.28,11.28,0,1,0,11.28,11.28A11.28,11.28,0,0,0,164.21,57.13Zm0,15.55a4.28,4.28,0,1,1,4.28-4.27A4.27,4.27,0,0,1,164.21,72.68Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M262,142.66a12.39,12.39,0,1,0,12.39,12.39A12.41,12.41,0,0,0,262,142.66Zm0,17.77a5.39,5.39,0,1,1,5.39-5.38A5.39,5.39,0,0,1,262,160.43Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M134.17,252.91a11.28,11.28,0,1,0,11.27,11.27A11.28,11.28,0,0,0,134.17,252.91Zm0,15.55a4.28,4.28,0,1,1,4.27-4.28A4.28,4.28,0,0,1,134.17,268.46Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M167.47,220.83a3.5,3.5,0,0,0-4.88.82,9.52,9.52,0,0,1-13.28,2.24,3.5,3.5,0,1,0-4.06,5.7,16.54,16.54,0,0,0,23.05-3.88A3.5,3.5,0,0,0,167.47,220.83Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M311.52,250.61a3.5,3.5,0,0,0-4.12,5.66,9.53,9.53,0,0,1,2.09,13.3,3.5,3.5,0,0,0,5.66,4.12A16.55,16.55,0,0,0,311.52,250.61Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M234.81,192.48a3.5,3.5,0,0,0,.34-7,9.53,9.53,0,0,1-8.52-10.43,3.5,3.5,0,0,0-7-.7,16.54,16.54,0,0,0,14.79,18.09A2.17,2.17,0,0,0,234.81,192.48Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M109,147.56a16.5,16.5,0,0,0-22.35,6.79,3.51,3.51,0,0,0,1.44,4.74,3.44,3.44,0,0,0,1.64.41,3.5,3.5,0,0,0,3.09-1.85,9.52,9.52,0,0,1,12.89-3.92,3.5,3.5,0,1,0,3.29-6.17Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M183.65,101.62a3.5,3.5,0,1,0-2.22,6.64,9.53,9.53,0,0,1,6,12.06,3.51,3.51,0,0,0,2.21,4.43,3.58,3.58,0,0,0,1.11.18,3.49,3.49,0,0,0,3.32-2.39A16.54,16.54,0,0,0,183.65,101.62Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M305.32,134.35A9.53,9.53,0,0,1,314,144.67a3.5,3.5,0,0,0,3.18,3.79h.31a3.49,3.49,0,0,0,3.48-3.19,16.53,16.53,0,0,0-15-17.9,3.5,3.5,0,1,0-.61,7Z">
+                          </path>
+                          <path class="cls-1"
+                            d="M84.56,253.13a16.53,16.53,0,0,0-17.83,15.11,3.5,3.5,0,0,0,3.2,3.77h.3a3.49,3.49,0,0,0,3.48-3.21A9.51,9.51,0,0,1,84,260.11a3.5,3.5,0,0,0,.58-7Z">
+                          </path>
+                        </g>
+                      </g>
+                    </g>
+                  </g>
+                </svg>Dessert</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
