--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<button class="btn btn-primary">Hi</button>
-<fa-icon [icon]="faCoffee"></fa-icon>
+<app-navbar></app-navbar>
+<app-home></app-home>
